--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,37 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+    <div class="container">
+      <div class="row">
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+        <div class="col-md-4">
+          <div class="row text-center">
+            <div>
+              <button type="button" class="role-btn btn btn-info"><span class="glyphicon glyphicon-user" style="font-size: 3em;"></span></button>
+            </div>
+          </div>
+          <div class="row text-center">
+              Screener
+          </div>
+        </div>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
+        <div class="col-md-4">
+          <div class="row text-center">
+            <div>
+              <button type="button" class="role-btn btn btn-success"><span class="glyphicon glyphicon-user" style="font-size: 3em;"></span></button>
+            </div>
+          </div>
+          <div class="row text-center">
+              Recruiter
+          </div>
+        </div>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+        <div class="col-md-4">
+          <div class="row text-center">
+            <div>
+              <button type="button" class="role-btn btn btn-primary"><span class="glyphicon glyphicon-user" style="font-size: 3em;"></span></button>
+            </div>
+          </div>
+          <div class="row text-center">
+              Interviewer
+          </div>
+        </div>
+      </div>
+    </div>
