added buttons for changing dates to calendar

--- a/app/views/calendar.html
+++ b/app/views/calendar.html
@@ -1,4 +1,29 @@
-<div>   
+<div>
+<div> 
+<button
+  class="btn btn-primary"
+  mwl-date-modifier
+  date="calendarDay"
+  decrement="calendarView">
+  Previous
+</button>
+
+<button
+  class="btn btn-default"
+  mwl-date-modifier
+  date="calendarDay"
+  set-to-today>
+  Today
+</button>
+
+<button
+  class="btn btn-primary"
+  mwl-date-modifier
+  date="calendarDay"
+  increment="calendarView">
+  Next
+</button> 
+</div> 
   <mwl-calendar
     view="calendarView"
     view-date="calendarDate"
