--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,37 +1,39 @@
-    <div class="container">
-      <div class="row">
+<div class="container">
+  <div class="row">
 
-        <div class="col-md-4">
-          <div class="row text-center">
-            <div>
-              <button type="button" class="role-btn btn btn-info"><span class="glyphicon glyphicon-user" style="font-size: 3em;"></span></button>
-            </div>
-          </div>
-          <div class="row text-center">
-              Screener
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="row text-center">
-            <div>
-              <button type="button" class="role-btn btn btn-success"><span class="glyphicon glyphicon-user" style="font-size: 3em;"></span></button>
-            </div>
-          </div>
-          <div class="row text-center">
-              Recruiter
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="row text-center">
-            <div>
-              <button type="button" class="role-btn btn btn-primary"><span class="glyphicon glyphicon-user" style="font-size: 3em;"></span></button>
-            </div>
-          </div>
-          <div class="row text-center">
-              Interviewer
-          </div>
+    <div class="col-md-4">
+      <div class="row text-center">
+        <div>
+          <a href="#/screener/candidateForm">
+            <button type="button" class="role-btn btn btn-info"><span class="glyphicon glyphicon-user role-glyph"></span></button>
+          </a>
         </div>
       </div>
+      <div class="row text-center">
+          Screener
+      </div>
     </div>
+
+    <div class="col-md-4">
+      <div class="row text-center">
+        <div>
+          <button type="button" class="role-btn btn btn-success"><span class="glyphicon glyphicon-user role-glyph"></span></button>
+        </div>
+      </div>
+      <div class="row text-center">
+          Recruiter
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="row text-center">
+        <div>
+          <button type="button" class="role-btn btn btn-primary"><span class="glyphicon glyphicon-user role-glyph"></span></button>
+        </div>
+      </div>
+      <div class="row text-center">
+          Interviewer
+      </div>
+    </div>
+  </div>
+</div>
