Changed style for screener

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -15,7 +15,8 @@
 }
 
 .camera-glyph {
-  font-size: 5em;
+  font-size: 15px;
+  text-align: center;
 }
 
 .resumeImageLabel {
@@ -40,7 +41,8 @@
     cursor: pointer;
     display: inline-block;
     overflow: hidden;
-    padding: 0.625rem 1.25rem;
+    padding: 0.8rem 1.25rem;
+    margin-right: 20px;
 }
 
 .resumeImage:focus + label,
@@ -49,14 +51,6 @@
     outline: -webkit-focus-ring-color auto 5px;
 }
 
-.resumeImage + label svg {
-    width: 1em;
-    height: 1em;
-    vertical-align: middle;
-    fill: currentColor;
-    margin-top: -0.25em;
-    margin-right: 0.25em;
-}
 
 .resumeImage + label {
     color: #f1e5e6;
