--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,7 +17,9 @@
     <div class="col-md-4">
       <div class="row text-center">
         <div>
-          <button type="button" class="role-btn btn btn-success"><span class="glyphicon glyphicon-user role-glyph"></span></button>
+          <a href="#/recruiter/recruiterForm">
+            <button type="button" class="role-btn btn btn-success"><span class="glyphicon glyphicon-user role-glyph"></span></button>
+          </a>
         </div>
       </div>
       <div class="row text-center">
@@ -28,7 +30,9 @@
     <div class="col-md-4">
       <div class="row text-center">
         <div>
-          <button type="button" class="role-btn btn btn-primary"><span class="glyphicon glyphicon-user role-glyph"></span></button>
+          <a href="#/interviewer/interviewerForm">
+            <button type="button" class="role-btn btn btn-primary"><span class="glyphicon glyphicon-user role-glyph"></span></button>
+          </a>
         </div>
       </div>
       <div class="row text-center">
