--- a/app/views/candidateForm.html
+++ b/app/views/candidateForm.html
@@ -1,23 +1,23 @@
-<div class="text-center">
+<div class="text-center" ng-controller="CandidateFormCtrl">
   <div class="page-header">
     <h1>Add Candidate</h1>
   </div>
 
   <form>
     <div class="form-group">
-      <input type="text" placeholder="Name" />
+      <input type="text" ng-model="postCandidate.name" placeholder="Name" />
     </div>
     <div class="form-group">
-      <input type="text" placeholder="Email" />
+      <input type="text" ng-model="postCandidate.email" placeholder="Email" />
     </div>
     <div class="from-group">
-      <input type="text" placeholder="Major" />
+      <input type="text" ng-model="postCandidate.major" placeholder="Major" />
     </div>
     <br>
     <div class="form-group">
       <input type="file" name="resume" id="resume" class="resumeImage" accept="image/*" capture="camera">
       <label for="resume" class="resumeImageLabel"><span class="glyphicon glyphicon-camera camera-glyph"></span></label>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary" data-ng-click="submit()">Submit</button>
     </div>
   </form>
 
