Fixed minor front end issues

--- a/app/views/candidateForm.html
+++ b/app/views/candidateForm.html
@@ -1,5 +1,7 @@
 
 <script>
+  var pictureAdded = false;
+
   function readImage(input) {
     if (input.files && input.files[0]) {
       var reader = new FileReader();
@@ -9,6 +11,7 @@
           .width(300)
           .height(400 );
       };
+      pictureAdded = true;
       reader.readAsDataURL(input.files[0]);
     }
   }
@@ -53,18 +56,18 @@
             <label class="control-label" for="exampleInputEmail1">Needs Sponsorship?</label>
             <div class="radio">
               <label class="radio-inline">
-                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">Yes</label>
+                <input type="radio" name="sponsorship" value="option1">Yes</label>
               <label class="radio-inline">
-                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2" checked="">No</label>
+                <input type="radio" name="sponsorship" value="option2">No</label>
             </div>
           </div>
           <div class="form-group">
             <label class="control-label" for="exampleInputEmail1">Seeking Internship or Full-Time?</label>
             <div class="radio">
               <label class="radio-inline">
-                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">Internship</label>
+                <input type="radio" name="internOrFull" value="option1">Internship</label>
               <label class="radio-inline">
-                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2" checked="">Full-Time</label>
+                <input type="radio" name="internOrFull" value="option2">Full-Time</label>
             </div>
           </div>
           <div class="form-group">
@@ -79,18 +82,18 @@
             <label class="control-label" for="exampleInputEmail1">Final Evaluation:</label>
             <div class="radio">
               <label class="radio-inline" style="">
-                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">Invite to 1st Round Interviews</label>
+                <input type="radio" name="finalEval"  value="option1">Invite to 1st Round Interviews</label>
               <label class="radio-inline">
-                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2" checked="">Tentative</label>
+                <input type="radio" name="finalEval"  value="option2">Tentative</label>
               <label class="radio-inline">
-                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2" checked="">Turndown</label>
+                <input type="radio" name="finalEval"  value="option3">Turndown</label>
             </div>
           </div>
           <div class="form-group has-feedback">
             <label class="control-label">Screener Initials</label>
             <input class="form-control" type="text">
           </div>
-          <div id="thumbnail-preview-area">
+          <div id="thumbnail-preview-area" ng-if="pictureAdded">
             <img id="resume-preview-image" src="#"/>
           </div>
           <button type="submit" class="btn btn-success">Submit</button>
