Fixed icon size. Fixed hide image before it's taken. Fixed api route names.

--- a/app/views/candidateForm.html
+++ b/app/views/candidateForm.html
@@ -97,7 +97,7 @@
           </div>
 
           <div class="text-center">
-            <div id="thumbnail-preview-area">
+            <div id="thumbnail-preview-area" ng-if="pictureAdded">
               <img id="resume-preview-image" src="#"/>
             </div>
 
