--- a/app/views/candidateForm.html
+++ b/app/views/candidateForm.html
@@ -53,9 +53,9 @@
             <label class="control-label" for="needSponsorship">Needs Sponsorship?</label>
             <div class="radio">
               <label class="radio-inline">
-                <input type="radio" name="needSponsorship" value="option1">Yes</label>
+              <input type="radio" name="needSponsorship" ng-model="postCandidate.needSponsorship" value="yes">Yes</label>
               <label class="radio-inline">
-                <input type="radio" name="needSponsorship" value="option2">No</label>
+              <input type="radio" name="needSponsorship" ng-model="postCandidate.needSponsorship" value="no">No</label>
             </div>
           </div>
 
@@ -63,31 +63,31 @@
             <label class="control-label" for="internOrFull">Seeking Internship or Full-Time?</label>
             <div class="radio">
               <label class="radio-inline">
-                <input type="radio" name="internOrFull" value="option1">Internship</label>
+                <input type="radio" name="internOrFull" ng-model="postCandidate.internOrFull" value="internship">Internship</label>
               <label class="radio-inline">
-                <input type="radio" name="internOrFull" value="option2">Full-Time</label>
+                <input type="radio" name="internOrFull" ng-model="postCandidate.internOrFull" value="full-time">Full-Time</label>
             </div>
           </div>
 
           <div class="form-group">
             <label class="control-label">Areas of Interest (i.e. front end, back end, iOS, Android, etc.)</label>
-            <textarea class="form-control"></textarea>
+            <textarea ng-model="postCandidate.areaOfInterest" class="form-control"></textarea>
           </div>
 
           <div class="form-group">
             <label class="control-label">Preferred Language(s) (i.e. Java, C, C++, etc.)</label>
-            <textarea class="form-control"></textarea>
+            <textarea ng-model="postCandidate.preferredLanguages" class="form-control"></textarea>
           </div>
 
           <div class="form-group">
-            <label class="control-label" for="finalEval">Final Evaluation:</label>
+            <label class="control-label" for="finalEvaluation">Final Evaluation:</label>
             <div class="radio">
               <label class="radio-inline">
-                <input type="radio" name="finalEval" value="option1">Invite to 1st Round Interviews</label>
+                <input type="radio" name="finalEvaluation" ng-model="postCandidate.finalEvaluation" value="invite">Invite to 1st Round Interviews</label>
               <label class="radio-inline">
-                <input type="radio" name="finalEval" value="option2">Tentative</label>
+                <input type="radio" name="finalEvaluation" ng-model="postCandidate.finalEvaluation" value="tentative">Tentative</label>
               <label class="radio-inline">
-                <input type="radio" name="finalEval" value="option3">Turndown</label>
+                <input type="radio" name="finalEvaluation" ng-model="postCandidate.finalEvaluation" value="turndown">Turndown</label>
             </div>
           </div>
 
