Recruiter Route & Candidate Queue

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -69,3 +69,14 @@
 .resumeImage + label:hover {
     background-color: #722040;
 }
+
+/* Recruiter form styles */
+#candidate-queue {
+
+}
+
+button.candidate-queue-person {
+  margin-top: 7px;
+  margin-bottom: 7px;
+
+}
