--- a/app/styles/sidebar.css
+++ b/app/styles/sidebar.css
@@ -18,7 +18,7 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #000;
+    background: #0072CF;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -51,21 +51,31 @@
     list-style: none;
 }
 
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
+.sidebar-nav li > .input-group {
+    margin: 20px 10px;
+}
+
+.sidebar-nav li > .input-group > input{
+    border-radius: 15px;
+}
+
+.sidebar-nav li > .input-group > span {
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .sidebar-nav li a {
+    text-indent: 20px;
+    line-height: 40px;
     display: block;
     text-decoration: none;
-    color: #999999;
+    color: #fff;
 }
 
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
+    color: #0072CF;
+    background: #fff;
 }
 
 .sidebar-nav li a:active,
@@ -74,18 +84,23 @@
 }
 
 .sidebar-nav > .sidebar-brand {
-    height: 65px;
+    height: 40px;
     font-size: 18px;
     line-height: 60px;
 }
 
 .sidebar-nav > .sidebar-brand a {
-    color: #999999;
+    color: #fff;
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
     color: #fff;
     background: none;
+}
+
+#candidate-list {
+  list-style: none;
+  padding: 0;
 }
 
 @media(min-width:768px) {
@@ -115,5 +130,3 @@
         margin-right: 0;
     }
 }
-
-/*background-color: #0072CF;*/
