added Major and School text inputs

--- a/app/views/candidateForm.html
+++ b/app/views/candidateForm.html
@@ -45,6 +45,16 @@
           </div>
 
           <div class="form-group">
+            <label class="control-label" for="school">School:</label>
+            <input class="form-control" id="school" type="text" ng-model="postCandidate.school" required>
+          </div>
+
+          <div class="form-group">
+            <label class="control-label" for="major">Major:</label>
+            <input class="form-control" id="major" type="text" ng-model="postCandidate.major" required>
+          </div>
+
+          <div class="form-group">
             <label class="control-label">Graduation Date:</label>
             <input class="form-control" type="text" ng-model="postCandidate.graduationDate" required>
           </div>
